--- a/articoli/html-semantico.html
+++ b/articoli/html-semantico.html
@@ -46,6 +46,8 @@
 		  rel="stylesheet"
 		  integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
 		  crossorigin="anonymous"/>
+	<!-- Typography overrides -->
+	<link rel="stylesheet" href="../css/typography.css"/>
 
 	<style>
         .object-fit-cover {
@@ -358,28 +360,28 @@
 				</ul>
 
 				<h2 id="esempio-struttura">Esempio di struttura semantica</h2>
-				<pre><code>&lt;header&gt;
+				<pre><code style="color: #000">&lt;header&gt;
   &lt;nav aria-label="Principale"&gt;...&lt;/nav&gt;
 &lt;/header&gt;
 
 &lt;main id="contenuto"&gt;
   &lt;article&gt;
-    &lt;header&gt;
-      &lt;h1&gt;Titolo articolo&lt;/h1&gt;
-      &lt;p&gt;&lt;time datetime="2025-07-20"&gt;20 lug 2025&lt;/time&gt;&lt;/p&gt;
-    &lt;/header&gt;
+	&lt;header&gt;
+	  &lt;h1&gt;Titolo articolo&lt;/h1&gt;
+	  &lt;p&gt;&lt;time datetime="2025-07-20"&gt;20 lug 2025&lt;/time&gt;&lt;/p&gt;
+	&lt;/header&gt;
 
-    &lt;section&gt;
-      &lt;h2&gt;Sezione 1&lt;/h2&gt;
-      &lt;p&gt;...&lt;/p&gt;
-    &lt;/section&gt;
+	&lt;section&gt;
+	  &lt;h2&gt;Sezione 1&lt;/h2&gt;
+	  &lt;p&gt;...&lt;/p&gt;
+	&lt;/section&gt;
 
-    &lt;section&gt;
-      &lt;h2&gt;Sezione 2&lt;/h2&gt;
-      &lt;p&gt;...&lt;/p&gt;
-    &lt;/section&gt;
+	&lt;section&gt;
+	  &lt;h2&gt;Sezione 2&lt;/h2&gt;
+	  &lt;p&gt;...&lt;/p&gt;
+	&lt;/section&gt;
 
-    &lt;footer&gt;Tag: HTML, Semantica&lt;/footer&gt;
+	&lt;footer&gt;Tag: HTML, Semantica&lt;/footer&gt;
   &lt;/article&gt;
 
   &lt;aside aria-label="Risorse correlate"&gt;...&lt;/aside&gt;
