--- a/index.html
+++ b/index.html
@@ -49,6 +49,8 @@
 			integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
 			crossorigin="anonymous"
 	/>
+	<!-- Typography overrides -->
+	<link rel="stylesheet" href="/css/typography.css"/>
 
 	<!-- Preload immagine hero -->
 	<link rel="preload" as="image" href="assets/img/hero/hero-office-1920.avif"
@@ -168,6 +170,8 @@
 						<li><a class="dropdown-item" href="articoli.html?categoria=html">HTML</a></li>
 						<li><a class="dropdown-item" href="articoli.html?categoria=css">CSS</a></li>
 						<li><a class="dropdown-item" href="articoli.html?categoria=javascript">JavaScript</a></li>
+						<li><a class="dropdown-item" href="articoli.html?categoria=performance">Performance</a></li>
+						<li><a class="dropdown-item" href="articoli.html?categoria=accessibilita">Accesibilità</a></li>
 						<li>
 							<hr class="dropdown-divider">
 						</li>
@@ -371,16 +375,16 @@
 		<aside aria-labelledby="cat-title" class="mb-5">
 			<h2 id="cat-title" class="h3 mb-3">Categorie principali</h2>
 			<ul class="list-inline m-0">
-				<li class="list-inline-item mb-2"><a class="btn btn-sm btn-outline-secondary" href="/categoria/html/">HTML</a>
+				<li class="list-inline-item mb-2"><a class="btn btn-sm btn-outline-secondary" href="articoli.html?categoria=html">HTML</a>
 				</li>
 				<li class="list-inline-item mb-2"><a class="btn btn-sm btn-outline-secondary"
-													 href="/categoria/css/">CSS</a></li>
+													 href="articoli.html?categoria=css">CSS</a></li>
 				<li class="list-inline-item mb-2"><a class="btn btn-sm btn-outline-secondary"
-													 href="/categoria/javascript/">JavaScript</a></li>
+													 href="articoli.html?categoria=javascript">JavaScript</a></li>
 				<li class="list-inline-item mb-2"><a class="btn btn-sm btn-outline-secondary"
-													 href="/categoria/performance/">Performance</a></li>
+													 href="articoli.html?categoria=performance">Performance</a></li>
 				<li class="list-inline-item mb-2"><a class="btn btn-sm btn-outline-secondary"
-													 href="/categoria/accessibilita/">Accessibilità</a></li>
+													 href="articoli.html?categoria=accessibilita">Accessibilità</a></li>
 			</ul>
 		</aside>
 
