--- a/articoli/accessibilita-web.html
+++ b/articoli/accessibilita-web.html
@@ -44,6 +44,8 @@
 		  rel="stylesheet"
 		  integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
 		  crossorigin="anonymous"/>
+	<!-- Typography overrides -->
+	<link rel="stylesheet" href="../css/typography.css"/>
 
 	<style>
         .object-fit-cover {
