Remove global typography stylesheet and associated overrides across all pages.

--- a/articoli.html
+++ b/articoli.html
@@ -41,8 +41,6 @@
 		  rel="stylesheet"
 		  integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
 		  crossorigin="anonymous"/>
-	<!-- Typography overrides -->
-	<link rel="stylesheet" href="/css/typography.css"/>
 
 	<style>
         .object-fit-cover {
@@ -342,11 +340,10 @@
 
 <footer class="py-4 border-top">
 	<div class="container d-flex flex-column flex-sm-row align-items-center justify-content-between gap-3">
-		<small class="text-muted">© <span id="year"></span> Scaledia</small>
+		<small class="text-muted">&copy; <span id="year"></span> Scaledia</small>
 		<nav aria-label="Link social">
-			<a class="text-muted me-3" href="#">Twitter/X</a>
-			<a class="text-muted me-3" href="#">GitHub</a>
-			<a class="text-muted" href="#">LinkedIn</a>
+			<a class="text-muted me-3" href="https://github.com/CrescenzoSorrentino">GitHub</a>
+			<a class="text-muted" href="https://www.linkedin.com/in/crescenzo-sorrentino-989808354">Linkedin</a>
 		</nav>
 	</div>
 </footer>
