--- a/articoli/flexbox-vs-grid.html
+++ b/articoli/flexbox-vs-grid.html
@@ -45,8 +45,6 @@
 		  rel="stylesheet"
 		  integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
 		  crossorigin="anonymous"/>
-	<!-- Typography overrides -->
-	<link rel="stylesheet" href="../css/typography.css"/>
 
 	<style>
         .object-fit-cover {
@@ -58,11 +56,11 @@
             top: 1rem
         }
 
-        .prose code {
-            background: #f8f9fa;
-            padding: .15rem .35rem;
-            border-radius: .25rem
-        }
+      		code {
+			background: #f8f9fa;
+			padding: .15rem .35rem;
+			border-radius: .25rem
+		}
 
         pre code {
             display: block;
@@ -283,7 +281,7 @@
 	<div class="container">
 		<div class="row g-5">
 			<!-- Contenuto -->
-			<article class="col-lg-8 prose">
+			<article class="col-lg-8 lh-lg fs-5">
 				<p class="lead"><strong>Flexbox</strong> e <strong>CSS Grid</strong> sono due sistemi di layout
 					fondamentali in CSS: il primo eccelle su un’unica dimensione, il secondo gestisce griglie
 					bidimensionali complesse.</p>
@@ -384,8 +382,12 @@
 
 <!-- Footer -->
 <footer class="py-4 border-top">
-	<div class="container d-flex flex-column flex-sm-row align-items-center justify-content-between">
-		<small class="text-muted">© <span id="year"></span> Scaledia</small>
+	<div class="container d-flex flex-column flex-sm-row align-items-center justify-content-between gap-3">
+		<small class="text-muted">&copy; <span id="year"></span> Scaledia</small>
+		<nav aria-label="Link social">
+			<a class="text-muted me-3" href="https://github.com/CrescenzoSorrentino">GitHub</a>
+			<a class="text-muted" href="https://www.linkedin.com/in/crescenzo-sorrentino-989808354">Linkedin</a>
+		</nav>
 	</div>
 </footer>
 
