--- a/articoli/flexbox-vs-grid.html
+++ b/articoli/flexbox-vs-grid.html
@@ -67,7 +67,7 @@
             padding: 1rem;
             border-radius: .5rem;
             background: #0b0b0b;
-            color: #f8f9fa;
+            color: #f8f9fa !important;
             overflow: auto
         }
 
@@ -305,7 +305,7 @@
 				</ul>
 
 				<h2 id="esempio">Esempio di codice</h2>
-				<pre><code style="color: #000">/* Flexbox */
+				<pre><code>/* Flexbox */
 .container {
   display: flex;
   justify-content: space-between;
