--- a/articoli/html-semantico.html
+++ b/articoli/html-semantico.html
@@ -68,7 +68,7 @@
             padding: 1rem;
             border-radius: .5rem;
             background: #0b0b0b;
-            color: #f8f9fa;
+            color: #f8f9fa !important;
             overflow: auto
         }
 
@@ -358,7 +358,7 @@
 				</ul>
 
 				<h2 id="esempio-struttura">Esempio di struttura semantica</h2>
-				<pre><code style="color: #000">&lt;header&gt;
+				<pre><code>&lt;header&gt;
   &lt;nav aria-label="Principale"&gt;...&lt;/nav&gt;
 &lt;/header&gt;
 
