--- a/articoli/js-performance.html
+++ b/articoli/js-performance.html
@@ -68,7 +68,7 @@
             padding: 1rem;
             border-radius: .5rem;
             background: #0b0b0b;
-            color: #f8f9fa;
+            color: #f8f9fa !important;
             overflow: auto
         }
 
