Add `chi-siamo.html`, `contatti.html`, and `servizi.html` pages with metadata, structured data, and accessible design structure.

--- a/articoli.html
+++ b/articoli.html
@@ -140,8 +140,9 @@
 				<li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
 				<li class="nav-item"><a class="nav-link active" aria-current="page" href="articoli.html">Articoli</a>
 				</li>
-				<li class="nav-item"><a class="nav-link" href="#chi-siamo">Chi siamo</a></li>
-				<li class="nav-item"><a class="nav-link" href="#contatti">Contatti</a></li>
+				<li class="nav-item"><a class="nav-link" href="servizi.html">Servizi</a></li>
+				<li class="nav-item"><a class="nav-link" href="chi-siamo.html">Chi siamo</a></li>
+				<li class="nav-item"><a class="nav-link" href="contatti.html">Contatti</a></li>
 
 			</ul>
 		</div>
