--- a/articoli/accessibilita-web.html
+++ b/articoli/accessibilita-web.html
@@ -264,8 +264,9 @@
 			<ul class="navbar-nav ms-auto">
 				<li class="nav-item"><a class="nav-link" href="../index.html">Home</a></li>
 				<li class="nav-item"><a class="nav-link" href="../articoli.html">Articoli</a></li>
-				<li class="nav-item"><a class="nav-link" href="../index.html#chi-siamo">Chi siamo</a></li>
-				<li class="nav-item"><a class="nav-link" href="../index.html#contatti">Contatti</a></li>
+				<li class="nav-item"><a class="nav-link" href="../servizi.html">Servizi</a></li>
+				<li class="nav-item"><a class="nav-link" href="../chi-siamo.html">Chi siamo</a></li>
+				<li class="nav-item"><a class="nav-link" href="../contatti.html">Contatti</a></li>
 			</ul>
 		</div>
 	</div>
