Add `chi-siamo.html`, `contatti.html`, and `servizi.html` pages with metadata, structured data, and accessible design structure.

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 	<!-- Canonical & hreflang -->
 	<link rel="canonical" href="https://scaledia.net/"/>
-	<link rel="alternate" hreflang="it" href="https://scaledia.net/"/>
+	<link rel="alternate" hreflang="it-IT" href="https://scaledia.net/"/>
 
 	<!-- Open Graph -->
 	<meta property="og:title" content="Scaledia – Servizi Front‑End e Creazione Siti Web"/>
