Add `chi-siamo.html`, `contatti.html`, and `servizi.html` pages with metadata, structured data, and accessible design structure.

--- a/articoli.html
+++ b/articoli.html
@@ -130,7 +130,7 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top">
 	<div class="container">
 		<a class="navbar-brand fw-semibold" href="index.html">Scaledia.net</a>
-		<button class="navbar-toggler" type="button" data-bs-toggle="collapse" href="#primaryNav"
+		<button class="navbar-toggler" type="button" data-bs-toggle="collapse"
 				data-bs-target="#primaryNav"
 				aria-controls="primaryNav" aria-expanded="false" aria-label="Apri/chiudi navigazione">
 			<span class="navbar-toggler-icon"></span>
