--- a/chi-siamo.html
+++ b/chi-siamo.html
@@ -6,7 +6,7 @@
 
 	<title>Chi siamo – Scaledia</title>
 	<meta name="description"
-		  content="Scaledia è un blog di sviluppo web: condividiamo guide chiare e pratiche su HTML, CSS e JavaScript con attenzione ad accessibilità e performance.">
+		  content="Scaledia offre articoli e servizi di consulenza, formazione e sviluppo web su HTML, CSS e JavaScript, con focus su accessibilità e performance.">
 	<link rel="canonical" href="https://scaledia.net/chi-siamo.html"/>
 	<link rel="alternate" hreflang="it" href="https://scaledia.net/chi-siamo.html"/>
 	<meta name="robots" content="index,follow,max-image-preview:large"/>
@@ -16,7 +16,7 @@
 	<!-- Open Graph -->
 	<meta property="og:title" content="Chi siamo – Scaledia"/>
 	<meta property="og:description"
-		  content="La missione di Scaledia: guide e tutorial su HTML, CSS e JavaScript, con buone pratiche di accessibilità e performance."/>
+		  content="Scaledia: articoli e servizi di consulenza, formazione e sviluppo su HTML, CSS e JavaScript, con focus su accessibilità e performance."/>
 	<meta property="og:type" content="website"/>
 	<meta property="og:url" content="https://scaledia.net/chi-siamo.html"/>
 	<meta property="og:image" content="https://scaledia.net/assets/img/og/og-hero-1200x630.jpg"/>
@@ -28,7 +28,7 @@
 	<meta name="twitter:card" content="summary_large_image"/>
 	<meta name="twitter:title" content="Chi siamo – Scaledia"/>
 	<meta name="twitter:description"
-		  content="Chi siamo: la nostra missione e i nostri valori per un web più accessibile e performante."/>
+		  content="Articoli e servizi: consulenza, formazione e sviluppo web con focus su accessibilità e performance."/>
 	<meta name="twitter:image" content="https://scaledia.net/assets/img/og/og-hero-1200x630.jpg"/>
 	<meta name="twitter:image:alt" content="Scaledia: guide e tutorial su HTML, CSS e JavaScript"/>
 	<meta name="twitter:site" content="@TUO_HANDLE"/>
@@ -129,13 +129,13 @@
 			<li class="breadcrumb-item"><a href="index.html">Home</a></li>
 			<li class="breadcrumb-item active" aria-current="page">Chi siamo</li>
 		</ol>
-		<h1 class="h2 mb-1">Chi siamo</h1>
+		<h1 id="page-title" class="h2 mb-1">Chi siamo</h1>
 		<p class="text-muted mb-0">La nostra missione e i nostri valori per un web più accessibile, veloce e
 			mantenibile.</p>
 	</nav>
 </header>
 
-<main id="contenuto" class="py-5">
+<main id="contenuto" class="py-5" aria-labelledby="page-title">
 	<div class="container">
 		<section class="mb-5" aria-labelledby="missione">
 			<h2 id="missione" class="h3">Missione</h2>
@@ -171,11 +171,13 @@
 		<section class="mb-5" aria-labelledby="cosa-trovi">
 			<h2 id="cosa-trovi" class="h3">Cosa trovi su Scaledia</h2>
 			<ul>
+				<li>Servizi: <a href="servizi.html#prezzi">sviluppo front‑end e creazione siti web</a>.</li>
 				<li>Guide passo‑passo su HTML, CSS e JavaScript.</li>
 				<li>Snippet e pattern pronti all’uso per layout e componenti.</li>
 				<li>Approfondimenti su SEO tecnico, accessibilità, performance.</li>
 			</ul>
-			<p class="mb-0"><a class="btn btn-primary" href="articoli.html">Esplora gli articoli</a></p>
+			<p class="mb-0"><a class="btn btn-primary me-2" href="articoli.html">Esplora gli articoli</a><a
+					class="btn btn-outline-primary" href="servizi.html#prezzi">Scopri i servizi</a></p>
 		</section>
 
 		<section class="mb-3" aria-labelledby="contattaci">
