--- a/articoli/html-semantico.html
+++ b/articoli/html-semantico.html
@@ -300,6 +300,7 @@
 </head>
 
 <body>
+<a class="visually-hidden-focusable" href="#contenuto">Salta al contenuto</a>
 <!-- NAVBAR -->
 <nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top">
 	<div class="container">
@@ -312,7 +313,7 @@
 		<div class="collapse navbar-collapse" id="primaryNav">
 			<ul class="navbar-nav ms-auto">
 				<li class="nav-item"><a class="nav-link" href="../index.html">Home</a></li>
-				<li class="nav-item"><a class="nav-link" href="../articoli.html">Articoli</a></li>
+				<li class="nav-item"><a class="nav-link active" aria-current="page" href="../articoli.html">Articoli</a></li>
 				<li class="nav-item"><a class="nav-link" href="../servizi.html">Servizi</a></li>
 				<li class="nav-item"><a class="nav-link" href="../chi-siamo.html">Chi siamo</a></li>
 				<li class="nav-item"><a class="nav-link" href="../contatti.html">Contatti</a></li>
