--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
 			integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
 			crossorigin="anonymous"
 	/>
+	<link rel="stylesheet" href="/css/theme.css">
 	<noscript>
 		<link rel="stylesheet" href="/css/noscript.css">
 	</noscript>
@@ -261,8 +262,10 @@
 						<div class="card-header bg-primary text-white">Più scelto</div>
 						<div class="card-body d-flex flex-column">
 							<h3 class="h5">Sito vetrina</h3>
-							<p class="text-muted">Fino a 8 pagine, UI personalizzata, form contatti, SEO/a11y avanzati.</p>
-							<div class="mt-auto"><a class="btn btn-primary w-100" href="servizi.html#prezzi">Vedi dettagli</a></div>
+							<p class="text-muted">Fino a 8 pagine, UI personalizzata, form contatti, SEO/a11y
+								avanzati.</p>
+							<div class="mt-auto"><a class="btn btn-primary w-100" href="servizi.html#prezzi">Vedi
+								dettagli</a></div>
 						</div>
 					</div>
 				</div>
