Add donation sections across articles and update pagination styles in `theme.css` and `theme.scss`.

--- a/articoli/accessibilita-web.html
+++ b/articoli/accessibilita-web.html
@@ -422,12 +422,27 @@
 				</ol>
 
 				<hr class="my-4"/>
-				<p class="mb-0">
-					Continua con: <a href="html-semantico.html">HTML semantico</a>,
-					<a href="flexbox-vs-grid.html">Flexbox vs CSS Grid</a> e
-					<a href="js-performance.html">Performance JavaScript</a>.
-				</p>
-			</article>
+ 			<p class="mb-0">
+ 				Continua con: <a href="html-semantico.html">HTML semantico</a>,
+ 				<a href="flexbox-vs-grid.html">Flexbox vs CSS Grid</a> e
+ 				<a href="js-performance.html">Performance JavaScript</a>.
+ 			</p>
+ 			<!-- Donazioni: sostituisci i link con i tuoi (PayPal.me/Donate o Stripe Payment Link, Ko‑fi/BuyMeACoffee) -->
+ 			<section class="mt-4" aria-labelledby="donazioni-articolo" role="region">
+ 				<div class="card shadow-sm border-0 bg-light">
+ 					<div class="card-body d-flex flex-column flex-md-row align-items-start align-items-md-center justify-content-between gap-3">
+ 						<div>
+ 							<h2 id="donazioni-articolo" class="h5 mb-1">Supporta il blog</h2>
+ 							<p class="mb-0 text-muted">Se questo articolo ti è stato utile, puoi supportare Scaledia con una donazione.</p>
+ 						</div>
+ 						<div class="d-flex flex-wrap gap-2">
+ 							<a class="btn btn-primary" href="https://paypal.me/TUO_USERNAME" target="_blank" rel="noopener nofollow">Dona con PayPal</a>
+ 							<a class="btn btn-outline-primary" href="https://ko-fi.com/TUO_USERNAME" target="_blank" rel="noopener nofollow">Offri un caffè</a>
+ 						</div>
+ 					</div>
+ 				</div>
+ 			</section>
+ 			</article>
 
 			<!-- Sidebar -->
 			<aside class="col-lg-4">
