--- a/articoli.html
+++ b/articoli.html
@@ -195,6 +195,23 @@
 			</div>
 		</form>
 
+		<!-- DONAZIONI -->
+		<section id="donazioni" class="mb-4" aria-labelledby="donazioni-title" role="region">
+			<div class="card shadow-sm border-0 bg-light">
+				<div class="card-body d-flex flex-column flex-md-row align-items-start align-items-md-center justify-content-between gap-3">
+					<div>
+						<h2 id="donazioni-title" class="h5 mb-1">Supporta il blog</h2>
+						<p class="mb-0 text-muted">Se i contenuti di Scaledia ti sono utili, considera una piccola donazione. Grazie!</p>
+					</div>
+					<div class="d-flex flex-wrap gap-2">
+						<a class="btn btn-primary" href="https://paypal.me/TUO_USERNAME" target="_blank" rel="noopener nofollow">Dona con PayPal</a>
+						<a class="btn btn-outline-primary" href="https://ko-fi.com/TUO_USERNAME" target="_blank" rel="noopener nofollow">Offri un caffè</a>
+					</div>
+				</div>
+			</div>
+			<!-- Suggerimento: sostituisci i link con i tuoi (PayPal.me, PayPal Donate o Stripe Payment Link, Ko‑fi/BuyMeACoffee) -->
+		</section>
+
 		<!-- LISTA ARTICOLI -->
 		<section aria-labelledby="lista-articoli">
 			<h2 id="lista-articoli" class="visually-hidden">Elenco articoli</h2>
